--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.18.8",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-config-jquery": "^1.0.1",
+    "eslint-plugin-import": "^2.8.0",
     "glob": "^7.1.2",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "^4.0.0",
@@ -24,5 +27,7 @@
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^2.0.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "eslint": "^4.12.1"
+  }
 }
